# bfkit

./: .gitattributes  .travis.yml  Cargo.toml  README.md
src/: compiler.rs  interp.rs  ir.rs  lib.rs  main.rs  optimizer.rs  parser.rs  repl.rs  template.c
test/: ackermann.bf  e.bf  life.bf  multi.bf
