[package]
name = "bfkit"
version = "0.1.3"
authors = ["Scitoshi Nakayobro <matthewtpeterson1@gmail.com>"]
edition = "2018"
description = "A Brainfuck toolkit"
license = "MIT"
repository = "https://github.com/sci4me/bfkit"
keywords = ["brainfuck", "compiler"]
readme = "README.md"

[badges.travis-ci]
repository = "sci4me/bfkit"

[[bin]]
name = "bfkit"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"